--- a/chat/templates/partials/navbar.html
+++ b/chat/templates/partials/navbar.html
@@ -1,17 +1,23 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
-      <a class="navbar-brand" href="{% url 'index' %}">
+      <a class="navbar-brand" href="{% url 'home' %}">
         <i class="far fa-comments orange-color"></i> <strong><em>  KuraKani</em></strong>
       </a>
+      <div class="navbar-brand mx-auto">
+        {% if room %}
+            <b class="nav-link active text-primary ml-auto">{{room.name}} Room</b>
+        {% endif %}
+      </div>
+
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+      
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
           {% if request.user.is_authenticated %}
-            <a class="nav-link active" aria-current="page" href="{% url 'chat' %}">Chat</a>
             <a class="nav-link active" href="{% url 'history' %}">History</a>
-            <a class="nav-link" href="{% url 'logout' %}">Logout</a>
+            <a class="nav-link active" href="{% url 'logout' %}">Logout</a>
           {% else %}
             <a class="nav-link active" href="{% url 'login' %}">Login</a>
             <a class="nav-link active" href="{% url 'register' %}">Register</a>
