Change site name

--- a/chat/templates/base.html
+++ b/chat/templates/base.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Kurakani</title>
+    <title>ChatVerse</title>
     <link
       rel="icon"
       href="https://www.brainstorm-new-media.de/pix/icon-kontakt.png"
