--- a/chat/templates/partials/navbar.html
+++ b/chat/templates/partials/navbar.html
@@ -1,7 +1,7 @@
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <div class="container-fluid">
       <a class="navbar-brand" href="{% url 'home' %}">
-        <i class="far fa-comments orange-color"></i> <strong><em>  KuraKani</em></strong>
+        <i class="far fa-comments orange-color"></i> <strong><em>  ChatVerse</em></strong>
       </a>
       <div class="navbar-brand mx-auto">
         {% if room %}
